<resources>
    <string name="app_name">舞媚娘</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading_view">正在加载中……</string>
    <string name="account_state">账号信息</string>
    <string name="recharge">充值</string>
    <string name="order_inquiry">订单查询</string>
    <string name="gold">金币</string>
    <string name="evaluate">评价</string>
    <string name="logout">退出登录</string>
    <string name="check_network">正在检测网络</string>
    <string name="app_network">请开启本机网络!</string>
    <string name="search_city_hint">搜索全国城市(中文/拼音)</string>
    <string name="getqiniutoken_fail">获取上传凭证失败!</string>
    <string name="modifypreframe">修改片头</string>
    <string name="load_tips">登录后才能上传</string>
    <string name="upload_success">上传成功，请至【我的】界面查看您空间中已上传的视频！”</string>
    <string name="pull_to_refresh_pull">下拉刷新</string>
    <string name="pull_to_refresh_release">松开后刷新</string>
    <string name="pull_to_refresh_refreshing">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release">松开后加载</string>
    <string name="pull_to_refresh_footer_pull">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing">正在加载中\u2026</string>
    <string name="no_my_video">暂无我的秀舞视频</string>
    <string name="no_my_downVideo">暂无我下载的视频</string>
    <string name="no_my_fans">暂无我的粉丝</string>
    <string name="no_my_attention">暂无我的关注</string>
    <string name="desc"/>
    <string name="list_arrow_right">向右</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="loadmore">加载更多...</string>
    <string name="loading">加载中...</string>
    <string name="dialog_title">友情提示</string>
    <string name="dialog_ok">确  定</string>
    <string name="dialog_cancel">取  消</string>
    <string name="download_status_downloading">下载中</string>
    <string name="download_status_downloaded">秀舞</string>
    <string name="download_unknown_title">"&amp;lt;未命名&amp;gt;"</string>
    <string name="download_error_no_sdcard">"%1$s"下载失败,请检查是否插入SD卡。</string>
    <string name="download_error">下载失败，请重新下载</string>
    <string name="download_error_no_space">"%1$s"下载失败,SD卡已满。</string>
    <string name="download_error_network">"%1$s"下载失败,网络异常。</string>
    <string name="download_error_service">"%1$s"下载失败,服务器异常。</string>
    <string name="download_error_client">"%1$s"下载失败,文件已损坏。</string>
    <string name="download_error_file_type">"%1$s"下载失败,文件格式不正确。</string>
    <string name="download_error_url">"%1$s"下载失败,下载地址无法解析。</string>
    <string name="download_error_cancel">"%1$s"下载被取消。</string>
    <string name="download_alert_no_sdcard">下载失败,请检查是否插入SD卡。</string>
    <string name="download_alert_no_space">下载失败,SD卡已满。</string>
    <string name="download_alert_network">下载失败,网络异常。</string>
    <string name="download_alert_service">下载失败,服务器异常。</string>
    <string name="download_alert_client">下载失败,文件已损坏。</string>
    <string name="download_alert_file_type">下载失败,文件格式不正确。</string>
    <string name="download_alert_url">下载失败,下载地址无法解析。</string>
    <string name="download_alert_cancel">下载被取消。</string>
    <string name="warning_update_info">发现%1$s款应用有更新。</string>
    <string name="warning_sdcard_unmounted">无法下载,请检查SD卡状态</string>
    <string name="warning_unknown_version">未知</string>
    <string name="notification_filename_separator">", "</string>
    <string name="notification_filename_extras">" 还有%1$d项"</string>
    <string name="notification_paused_by_app">被暂停</string>
    <string name="notification_download_complete">"下载完成"</string>
    <string name="download_status_installed">已安装</string>
    <string name="download_all_update">全部更新</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="download_remain_bytes">剩余%1$s%2$s</string>
    <string name="download_start">下载马上开始</string>
    <string name="player_loading">正在缓冲...</string>
    <string name="player_path_error">视频地址无效~</string>
    <string name="player_network_eror">网络不给力啊~</string>
    <string name="player_complete">播放完成~</string>
    <string name="init_decoders">正在初始化播放器...</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="hint">提示</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="action_back">返回</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="imageview_content_description"/>
    <string name="record_camera_author">%1$s 作品</string>
    <string name="record_camera_title">拍摄</string>
    <string name="record_camera_back">返回</string>
    <string name="record_camera_next">下一步</string>
    <string name="record_camera_back_delete">回删</string>
    <string name="record_camera_delay">延迟</string>
    <string name="record_camera_filter">滤镜</string>
    <string name="record_camera_init_faild">初始化视频存储路径失败</string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_camera_check_available_faild">手机满了！至少需要200M存储空间才能继续拍摄！</string>
    <string name="record_camera_open_audio_faild">无法打开录音设备！</string>
    <string name="record_camera_save_faild">视频信息保存失败！</string>
    <string name="record_camera_exit_dialog_message">是否放弃这段视频？</string>
    <string name="record_camera_import">导入</string>
    <string name="record_camera_import_image">照片</string>
    <string name="record_camera_import_image_choose">从本地照片选择</string>
    <string name="record_camera_import_image_faild">导入照片失败</string>
    <string name="record_camera_import_video">视频</string>
    <string name="record_camera_import_video_title">截\t取</string>
    <string name="record_camera_import_video_choose">从本地视频选择</string>
    <string name="record_camera_import_video_faild">导入视频失败</string>
    <string name="record_camera_tools_focus">焦点</string>
    <string name="record_camera_tools_led">闪光</string>
    <string name="record_camera_ghost">幽灵</string>
    <string name="record_camera_preview_title">编辑</string>
    <string name="record_camera_preview_pre">拍摄</string>
    <string name="record_camera_preview_next">下一步</string>
    <string name="record_camera_cancel_dialog_yes">确定</string>
    <string name="record_camera_cancel_dialog_no">取消</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="record_video_transcoding_success">视频保存在:%s</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>
    <string name="record_preview_theme">主题</string>
    <string name="record_preview_title">预览</string>
    <string name="record_preview_theme_original">原始</string>
    <string name="record_preview_theme_load_faild">主题加载失败</string>
    <string name="record_preview_encoding">正在转码…</string>
    <string name="record_preview_encoding_format">转码中\t%d%%</string>
    <string name="record_preview_music_nothing">无</string>
    <string name="record_preview_tab_theme">主题</string>
    <string name="record_preview_tab_filter">滤镜</string>
    <string name="record_preview_building">视频生成中…</string>
    <string name="main_empty_chatting">暂无聊天信息</string>
    <string name="main_title">沟通</string>
    <string name="main_contact">通讯录</string>
    <string name="main_group">群组</string>
    <string name="unread_count_overt_100">"..."</string>
    <string name="common_enter_activity">当前所在页面,</string>
    <string name="logout_menu_more">更多</string>
    <string name="main_empty_notice">暂无群组通知</string>
    <string name="main_empty_group">暂无群组列表</string>
    <string name="avatar_desc">头像</string>
    <string name="media_ejected">储存卡已拔出,语音功能将暂时不可用</string>
    <string name="media_no_memory">储存卡存储空间不足</string>
    <string name="voice_cancel_rcd_release">松开手指,取消发送</string>
    <string name="chatfooter_releasetofinish">松开 结束</string>
    <string name="chatfooter_presstorcd">按住 说话</string>
    <string name="chatting_send">发送</string>
    <string name="chat_footer_app_btn">更多</string>
    <string name="chat_footer_smiley_btn">表情</string>
    <string name="chat_footer_switch_mode_btn">语音说话与键盘输入切换</string>
    <string name="chat_footer_switch_mode_voice_btn">切换到按住说话</string>
    <string name="chat_footer_switch_mode_keybord_btn">切换到键盘</string>
    <string name="chatfooter_cancel_rcd">手指上滑,取消发送</string>
    <string name="chatfooter_cancel_rcd_release">松开手指,取消发送</string>
    <string name="chatfooter_too_short">录音时间太短</string>
    <string name="app_panel_pic">图片</string>
    <string name="app_panel_tackpic">拍照</string>
    <string name="app_panel_file">文件</string>
    <string name="fmt_time_length">%d\"</string>
    <string name="login_account_hint">请输入云通讯注册邮箱/手机</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="str_no_choice_account">还未选择子账号,请点选</string>
    <string name="str_start_ex">开始体验</string>
    <string name="main_sending">正在发送中</string>
    <string name="tips_regist_1">"登陆<font color="#1DB87F">yuntongxun.com</font>并注册"</string>
    <string name="tips_regist_2">填写注册基本资料</string>
    <string name="tips_regist_3">注册成功,获得8元测试体验费</string>
    <string name="login_yuntongxun">云通讯登录</string>
    <string name="login_regist">注册</string>
    <string name="login_login">登 录</string>
    <string name="tips_login_accountpwd_null">帐号或密码不能为空</string>
    <string name="tab_loading">正在加载…</string>
    <string name="app_tip">提示</string>
    <string name="entrance_chat_tips">与TA沟通（IM）</string>
    <string name="contact_contactDetail">联系人详情</string>
    <string name="contact_none">联系人不存在</string>
    <string name="main_plus_chat">发起会话/群聊</string>
    <string name="main_plus_groupchat">创建群组</string>
    <string name="main_plus_settings">设置</string>
    <string name="main_title_select_account">选择登陆帐号</string>
    <string name="str_group_name_hint">群组名称</string>
    <string name="str_group_notice_hint">群公告(选填)</string>
    <string name="app_button_create">创建</string>
    <string name="app_title_create_new_group">建立新群组</string>
    <string name="app_set">设置</string>
    <string name="select_contacts">选择联系人</string>
    <string name="settings_new_msg_notification_sound">新消息声音</string>
    <string name="settings_new_msg_notification_shake">新消息震动</string>
    <string name="settings_exit_title">退出客户端</string>
    <string name="settings_switch_title">退出当前账号</string>
    <string name="address_history_group_card">选择一个群</string>
    <string name="address_group_card_empty_tip">暂无群聊可选</string>
    <string name="address_select_group_card">选择群聊</string>
    <string formatted="false" name="radar_ok_count">%s(%d)</string>
    <string name="dialog_ok_button">确定</string>
    <string name="str_group_notice_tips">群公告</string>
    <string name="str_group_profile_tips">群简介</string>
    <string name="menu_main">媚娘榜</string>
    <string name="menu_video_shoot">视频录制</string>
    <string name="menu_mine">我的</string>
    <string name="mine_video_zone">视频空间</string>
    <string name="mine_professional_name">艺名：</string>
    <string name="shoot_search_suggestions">输入歌曲名或编舞老师姓名</string>
    <string name="shoot_star_teacher">明星老师</string>
    <string name="shoot_rhythm">节奏</string>
    <string name="shoot_make">制作</string>
    <string name="shoot_recommend">推荐...</string>
    <string name="shoot_empty_image">空内容</string>
    <string name="shoot_Login_prompt">您当前未登录,请先登录后下载推荐舞曲...</string>
    <string name="menu_main_btn_qg">全国榜</string>
    <string name="menu_main_btn_dr">达人榜</string>
    <string name="menu_main_btn_hw">精彩合舞</string>
    <string name="menu_main_btn_yz">优质视频</string>
    <string name="menu_main_btn_bs">比赛</string>
</resources>