<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:background="@drawable/bg_menu" >

    <RelativeLayout
        android:id="@+id/id_main_layout"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp" >

        <ImageView
            android:id="@+id/id_main_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/menu1" />

        <TextView
            android:id="@+id/id_main_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_main_iv"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/menu_main"
            android:textColor="@color/host_text_color_normal"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_shoot_layout"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/btn_select_bg" >

        <ImageView
            android:id="@+id/id_shoot_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/menu2" />

        <TextView
            android:id="@+id/id_shoot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_shoot_iv"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/menu_video_shoot"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_mine_layout"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp" >

        <ImageView
            android:id="@+id/id_mine_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/menu3" />

        <TextView
            android:id="@+id/id_mine_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_mine_iv"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/menu_mine"
            android:textColor="@color/host_text_color_normal"
            android:textSize="13sp" />
    </RelativeLayout>

</RelativeLayout>